--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -2,9 +2,6 @@
     font-family: 'inter';
     src: url(../fonts/inter/Inter-VariableFont_slnt\,wght.ttf);
 }
-html{
-    scroll-behavior: smooth;
-}
 body{
     background-color: #252525;
     padding: 0;
@@ -26,12 +23,9 @@ header{
     border-bottom-left-radius: 15px;
     height: 5em;
     width: 100%;
-    position: fixed;
-    top: 0;
-    z-index: 10;
+    
 }
 .criarlembrete{
-    padding-top: 80px;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -83,6 +77,8 @@ nav{
 .texto{
     padding-left: 1rem;
     font-weight: 600;
+    width: 100%;
+    word-wrap: break-word;
 }
 .lembrete{
     padding: 0.5rem;
@@ -92,11 +88,7 @@ nav{
     color: #000000;
     margin-bottom: 0.7rem;
     backdrop-filter: blur(5px);
-    background-color: #cccccc;
-}
-.sec2{
-    width: 100%;
-    
+    background-image: url(../imagens/background-task.png);
 }
 .fa-window-close{
     cursor: pointer;
@@ -107,5 +99,15 @@ nav{
     width: 100%;
 }
 .button button{
+    width: 100%;
+    border-radius: 10px;
+}
+.texto{
+    margin-left: 10px;
+}
+.fa-window-close{
+    margin-right: 10px;
+}
+.row{
     width: 100%;
 }
